[r=andreserl][bug=1682099][author=ricgard] Resolves button wrapping issue on images page

--- a/src/maasserver/static/scss/_pages.scratch.scss
+++ b/src/maasserver/static/scss/_pages.scratch.scss
@@ -324,6 +324,12 @@
     text-overflow: ellipsis;
   }
 
+  .u-width--two-thirds {
+    box-sizing: border-box;
+    float: left;
+    width: 66.66666%!important;
+  }
+
   .hidden {
     display: none;
   }
